infra/k8s/01-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cadowl
  labels:
    app.kubernetes.io/name: cadowl
    app.kubernetes.io/part-of: walmart-security-design
